# specs

./: .env.example  .gitignore  Makefile  README.md  consumer.companies.yaml  consumers.yaml  provider.companies.yaml  pyproject.toml
.github/workflows/: crawl-specs.yml  discover-consumers.yml  discover-providers.yml  docs.yml  notify-consumers.yml  scan-consumers.yml
checker/: __main__.py
companies/consumers/ansible-collections/community.general/issues/: 11599.json
companies/consumers/auth0/rules/issues/: 343.json
companies/consumers/fail/ansible-collections/community.general/: 11613.json
companies/consumers/fail/auth0/rules/: 344.json  347.json
companies/consumers/fail/gmpetrov/ultimate-saas-ts/: 15.json
companies/consumers/fail/kaansoral/adventureland/: 237.json
companies/consumers/fail/stripe/stripe-connect-furever-demo/: 262.json
companies/discovery/: candidates.json
companies/providers/sendgrid/openapi/: tsg_account_provisioning_v3.json  tsg_email_activity_v3.json  tsg_logs_v3.json
crawler/: agent.py  config.py  tools.py
discoverer/: __main__.py  runner.py
docs/: check-consumer.md  consumer-issues.md  consumers.md  drift-logs.md  how-it-works.md  index.md  local-dev.md  package.json  providers.md  status.data.ts  status.md
docs/.vitepress/: config.ts
docs/.vitepress/theme/: StatusPage.vue
make/: crawler.mk  notifier.mk
notifier/: __main__.py  agent.py  runner.py  tools.py
openclaw/plugins/driftabot-tool/: index.ts  package.json
openclaw/skills/driftabot/: SKILL.md
scripts/: run_diff.py
(+23 files in other folders)
