[project]
name = "driftabot-registry-crawler"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40",
    "langgraph>=0.2",
    "langchain-anthropic>=0.3",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "python-dotenv"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["checker*", "crawler*", "notifier*"]
